# Kinostar

./: README.md  curl-cmd.txt  movies.json  pyproject.toml
src/kinostar/: app.py  cache.py  config.py
