[project]
name = "kinostar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Vollmer", email = "av3@mailbox.org" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.26.0",
]

[project.scripts]
kinostar = "kinostar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
